feature: add twitter

--- a/sevboats/messages/midday_gun.yaml
+++ b/sevboats/messages/midday_gun.yaml
@@ -1,4 +1,4 @@
 - 'Раздался оглушительный выстрел #полуденная_пушка'
 - 'Ба-бах! #полуденная_пушка'
-- 'Бум! #полуденная_пушка'
+- 'Бада-Бум! #полуденная_пушка'
 - 'Раскатистый грохот #полуденная_пушка'
