refactor: use colorama

--- a/sevboats/messages/ships.yaml
+++ b/sevboats/messages/ships.yaml
@@ -1,2 +1,4 @@
-- {text: "Внимание! Катера не ходят!\n{datetime}", status: 'off'}
-- {text: "Все отлично. Катера ходят.\n{datetime}", status: 'on'}
+- {text: "Внимание! Катера не ходят!", status: 'off'}
+- {text: "Катера ходят. Все отлично.", status: 'on'}
+- {text: "Катера ходят. Полет нормальный ;).", status: 'on'}
+- {text: "Катера ходят. Запрыгивай ка на борт!.", status: 'on'}
